22/10: json scan